src/parser/snapshots/enderpy__parser__parser__tests__string_literal_concatnation-2.snap
---
source: src/parser/parser.rs
description: "b'a' b'b'"
---
Module {
    node: Node {
        start: 0,
        end: 9,
    },
    body: [
        ExpressionStatement(
            Constant(
                Constant {
                    node: Node {
                        start: 0,
                        end: 9,
                    },
                    value: Bytes(
                        [
                            97,
                            98,
                        ],
                    ),
                },
            ),
        ),
    ],
}
