src/parser/snapshots/enderpy__parser__parser__tests__string_literal_concatnation-4.snap
---
source: src/parser/parser.rs
description: "r'a' 'b'"
---
Module {
    node: Node {
        start: 0,
        end: 8,
    },
    body: [
        ExpressionStatement(
            Constant(
                Constant {
                    node: Node {
                        start: 0,
                        end: 8,
                    },
                    value: Str(
                        "ab",
                    ),
                },
            ),
        ),
    ],
}
