src/parser/snapshots/enderpy__parser__parser__tests__string_literal_concatnation-8.snap
---
source: src/parser/parser.rs
description: "('a'\n                'b'\n'c')"
---
Module {
    node: Node {
        start: 0,
        end: 29,
    },
    body: [
        ExpressionStatement(
            Constant(
                Constant {
                    node: Node {
                        start: 1,
                        end: 28,
                    },
                    value: Str(
                        "abc",
                    ),
                },
            ),
        ),
    ],
}
