src/parser/snapshots/enderpy__parser__parser__tests__string_literal_concatnation.snap
---
source: src/parser/parser.rs
description: "'a' 'b'"
---
Module {
    node: Node {
        start: 0,
        end: 7,
    },
    body: [
        ExpressionStatement(
            Constant(
                Constant {
                    node: Node {
                        start: 0,
                        end: 7,
                    },
                    value: Str(
                        "ab",
                    ),
                },
            ),
        ),
    ],
}
