src/parser/snapshots/enderpy__parser__parser__tests__subscript-3.snap
---
source: src/parser/parser.rs
description: "a[b:c:d]"
---
Module {
    node: Node {
        start: 0,
        end: 8,
    },
    body: [
        ExpressionStatement(
            Subscript(
                Subscript {
                    node: Node {
                        start: 0,
                        end: 2,
                    },
                    value: Name(
                        Name {
                            node: Node {
                                start: 0,
                                end: 1,
                            },
                            id: "a",
                        },
                    ),
                    slice: Slice(
                        Slice {
                            node: Node {
                                start: 3,
                                end: 7,
                            },
                            lower: Some(
                                Name(
                                    Name {
                                        node: Node {
                                            start: 2,
                                            end: 3,
                                        },
                                        id: "b",
                                    },
                                ),
                            ),
                            upper: Some(
                                Name(
                                    Name {
                                        node: Node {
                                            start: 4,
                                            end: 5,
                                        },
                                        id: "c",
                                    },
                                ),
                            ),
                            step: Some(
                                Name(
                                    Name {
                                        node: Node {
                                            start: 6,
                                            end: 7,
                                        },
                                        id: "d",
                                    },
                                ),
                            ),
                        },
                    ),
                },
            ),
        ),
    ],
}
